fix: correct wrong font import

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-@font-face {
-  font-family: Raleway;
-  src: url("./assets/fonts/Raleway-Regular.ttf");
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import "tailwindcss";
 
 @theme {
-  --font-raleway: Raleway;
+  --font-raleway: "Raleway", sans-serif;
+  --font-ibmplex: "IBM Plex Mono";
 
   --breakpoint-sm: 393px;
   --breakpoint-md: 634px;
